# python-logo

./: .buildinfo  .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  LICENSE  README.md  app.py  commands.html  contributing.html  genindex.html  index.html  installation.html  introduction.html  license.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  python_logo.events.html  python_logo.exceptions.html  python_logo.html  python_logo.interpreter.html  python_logo.parser.html  python_logo.routes.html  python_logo.utils.html  search.html  searchindex.js  usage.html
.github/workflows/: code-tests.yml  deploy-docs.yml
_modules/: index.html  python_logo.html
_modules/python_logo/: events.html  exceptions.html  interpreter.html  parser.html  routes.html  utils.html
_sources/: commands.rst.txt  contributing.rst.txt  index.rst.txt  introduction.rst.txt  python_logo.events.rst.txt  python_logo.interpreter.rst.txt  python_logo.routes.rst.txt
docs/source/: conf.py  index.rst  installation.rst  introduction.rst  license.rst  modules.rst  python_logo.exceptions.rst  python_logo.parser.rst  python_logo.rst  python_logo.utils.rst  usage.rst
frontend/: README.md  index.html  package-lock.json  package.json  styles.css  vite.config.js
frontend/public/lib/: turtle.css  turtle.js
frontend/src/: App.svelte  app.css  main.js  storeThemes.js
frontend/src/components/: ButtonBar.svelte  CanvasArea.svelte  Console.svelte  ContactModal.svelte  Header.svelte  Icon.svelte  InfoBar.svelte  LicenseModal.svelte  MainLayout.svelte  Modal.svelte  ResizableContainer.svelte  ResizableHorizontal.svelte  Secret.svelte  Socket.svelte  Textarea.svelte  Toast.svelte  Turtle.svelte
python_logo/: __init__.py  events.py  exceptions.py  grammar.py  interpreter.py  messages.py  parser.py  routes.py  utils.py
python_logo/interpreter/: command.py  parser.py
python_logo/static/: script.js  style.css  styles.css
python_logo/templates/: index.html
tests/: test_logo.py  test_parser.py  test_routes.py  test_socketio.py
