[tool.poetry]
name = "python-logo"
version = "0.1.0"
description = "Python Logo interpreter with web-based frontend."
authors = [
  "YarynaRachkevych1 <rarynka28@gmail.com>",
  "mkalitka <mikolaj.kalitka@proton.me>",
  "Magda-Tyton <magdaeelna@gmail.com>",
  "weebik <krystian.samaa@gmail.com>"
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
lark = "^1.2.2"
flask-socketio = "^5.4.1"
flask-gunicorn = "^0.1.1"
eventlet = "^0.38.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
ruff = "^0.7.1"
pre-commit = "^4.0.1"
sphinx = "^8.1.3"
furo = "^2024.8.6"

[tool.ruff]
target-version = "py310"
fix = true

[tool.ruff.lint]
select = [
  "ALL",
]
exclude = [
  "docs/**"
]
ignore = [
  "D100", # Missing docstring in public module
  "D104", # Missing docstring in public package
  "D203", # 1 blank line required before class docstring
  "D205", # 1 blank line required between summary line and description
  "D212", # Multi-line docstring summary should start at the second line
  "S603", # Subprocess call: check for execution of untrusted input
  "S607", # Starting a process with a partial executable path
  "COM812", # (formatter) Missing trailing comma in a tuple
  "ISC001", # (formatter) Implicitly concatenated string on a single line
  "T201" # TEMPORARY: `print` found
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
  "ANN", # flake8 annotations
  "INP001", # Implicit namespace package
  "D102", # Missing docstring in public method
  "D103", # Missing docstring in public function
  "S101" # Use of assert detected
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
